fixed some slide layout issues.

--- a/sass/custom-styles.scss
+++ b/sass/custom-styles.scss
@@ -552,11 +552,11 @@ header {
         max-width: 100vw;
         .slide {
           text-align: center;
-          max-height: 70vh; 
+          max-height: 70vh;
           background: $black;
           img {
             max-height: 70vh;
-            // width: 100%;
+            width: auto;
             margin: 0 auto;
           }
         }
